Opened 13 years ago

Closed 12 years ago

Last modified 12 years ago

#8388 closed bug (fixed)

[Tracker] crash in BPictureButton::Draw after enabling navigator

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is haiku-nightly-hrev42771-x86gcc2hybrid-raw.tar.xz

After enabling of navigator in Tracker settings Tracker crashed:

Thread 291 called debugger(): Need to set the 'disabled' pictures for this BPictureButton 
[...]
[Switching to team /boot/system/Tracker (128) thread w>/boot/home/queries/Name = int (291)]
0xffff0114 in ?? ()
(gdb) bt
#0  0xffff0114 in ?? ()
#1  0x00713fde in debugger () from /boot/system/lib/libroot.so
#2  0x00354e36 in BPictureButton::Draw () from /boot/system/lib/libbe.so
#3  0x003aabe4 in BView::_Draw () from /boot/system/lib/libbe.so
#4  0x003b035d in BWindow::DispatchMessage () from /boot/system/lib/libbe.so
#5  0x003b17a1 in BWindow::UpdateIfNeeded () from /boot/system/lib/libbe.so
#6  0x00395e10 in BTextView::_RequestDrawLines () from /boot/system/lib/libbe.so
#7  0x003941af in BTextView::_Refresh () from /boot/system/lib/libbe.so
#8  0x0038f405 in BTextView::SetText () from /boot/system/lib/libbe.so
#9  0x0038f329 in BTextView::SetText () from /boot/system/lib/libbe.so
#10 0x00388c43 in BTextControl::SetText () from /boot/system/lib/libbe.so
#11 0x005d8d76 in BPrivate::BNavigator::UpdateLocation () from /boot/system/lib/libtracker.so
#12 0x005d79f4 in BPrivate::BNavigator::AttachedToWindow () from /boot/system/lib/libtracker.so
#13 0x003aa93c in BView::_Attach () from /boot/system/lib/libbe.so
#14 0x003a7249 in BView::_AddChild () from /boot/system/lib/libbe.so
#15 0x003a70dd in BView::AddChild () from /boot/system/lib/libbe.so
#16 0x003ad5c3 in BWindow::AddChild () from /boot/system/lib/libbe.so
#17 0x0057bb7f in BPrivate::BContainerWindow::ShowNavigator () from /boot/system/lib/libtracker.so
#18 0x0056cdfc in BPrivate::BContainerWindow::MessageReceived () from /boot/system/lib/libtracker.so
#19 0x002dc5cb in BLooper::DispatchMessage () from /boot/system/lib/libbe.so
#20 0x003b05ad in BWindow::DispatchMessage () from /boot/system/lib/libbe.so
#21 0x003b4998 in BWindow::task_looper () from /boot/system/lib/libbe.so
#22 0x002ddb27 in BLooper::_task0_ () from /boot/system/lib/libbe.so
#23 0x007186d3 in thread_entry () from /boot/system/lib/libroot.so
#24 0x78380fec in ?? ()
(gdb)

Change History (8)

comment:1 by diver, 13 years ago

Summary: [Tracker] crash in BPictureButton::Draw () from /boot/system/lib/libbe.so[Tracker] crash in BPictureButton::Draw after enabling navigator

comment:2 by diver, 12 years ago

Still here in hrev45951. To reproduce one has to have a query window opened and enable navigator in Tracker settings window.

comment:3 by anevilyak, 12 years ago

Owner: changed from axeld to anevilyak
Status: newin-progress

comment:4 by anevilyak, 12 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev45954.

comment:5 by diver, 12 years ago

Interestingly, enabling navigator now also enables it for already opened query windows.

comment:6 by anevilyak, 12 years ago

Will look into that, it's most likely just a missing check in the settings change code.

in reply to:  5 comment:7 by anevilyak, 12 years ago

Replying to diver:

Interestingly, enabling navigator now also enables it for already opened query windows.

Should be fixed in hrev45957, that was an unrelated bug that was simply hidden by the fact that one previously couldn't get far enough to notice it. Thanks for the heads up!

comment:8 by diver, 12 years ago

BTW, I think that File Panel can actually benefit from having the navigator buttons.

Note: See TracTickets for help on using tickets.